Adding New Layer and using DDD.

--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -1,9 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+
+    "SchoolDBSettings": {
+        "ConnectionString": "mongodb://localhost:27017",
+        "DatabaseName": "schoolDB",
+        "StudentsCollectionName": "student"
+    },
+
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
