--- a/WebApplication1/MongoAPI.csproj
+++ b/WebApplication1/MongoAPI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -8,8 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MongoDB.Driver" Version="2.27.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Application_Layer\Application_Layer.csproj" />
+    <ProjectReference Include="..\Domain_Layer\Domain_Layer.csproj" />
+    <ProjectReference Include="..\Infraestructure_Layer\Infraestructure_Layer.csproj" />
   </ItemGroup>
 
 </Project>
