--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -6,6 +6,11 @@
         "StudentsCollectionName": "student"
     },
 
+    "CORS": {
+        "Origins": "http://localhost:9095;https://localhost:9095",
+        "AllowAll": "true"
+    },
+
     "Logging": {
         "LogLevel": {
             "Default": "Information",
